--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,372 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Art Museum</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./images/NA__MU.svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="body page__body">
+    <header class="header">
+      <div class="header__conteiner">
+        <div class="header__bg-photo"></div>
+
+        <a class="header__burger-menu-link" href="#menu"></a>
+
+        <a href="#" class="header__logo">
+          <p class="header__logo-link">NA</p>
+          <p class="header__logo-link">MU</p>
+        </a>
+
+        <section class="art-museum">
+          <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="art-museum__buy">
+            <p class="art-museum__buy-text">квитки</p>
+            <a class="art-museum__buttom" href="#виставки-та-події"></a>
+          </div>
+        </section>
+
+        <a href="#виставки-та-події" class="header__event">
+          <p class="header__event-line"></p>
+          <p class="header__event-text">події</p>
+        </a>
+      </div>
+
+    </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__conteiner">
+        <div class="menu__top">
+          <a href="#" class="menu__icon-close"></a>
+
+          <div class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#галерея">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#про-нас">Про нас</a>
+              </li>
+
+              <li class="nav__item">
+                <a class="nav__link" href="#виставки-та-події">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#контакти">Контакти</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="menu__bottom">
+          <h3 class="menu__title">Графік роботи</h3>
+          <div class="menu__wrapper">
+            <ul class="menu__schedule">
+              <li class="menu__schedule-text">12:00 — 20:00</li> середа <br>
+              <li class="menu__schedule-text">12:00 — 20:00</li> четвер<br>
+              <li class="menu__schedule-text">12:00 — 20:00</li> п’ятниця <br>
+              <li class="menu__schedule-text">11:00 — 19:00</li> субота <br>
+              <li class="menu__schedule-text">11:00 — 19:00</li> неділя
+            </ul>
+            <p class="menu__schedule-on-weekend">
+              <span class="menu__schedule-text">Вихідні:</span> понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main page__main">
+      <div class="main__conteiner">
+        <article class="current-events" id="виставки-та-події">
+
+          <section class="current-events__card card">
+            <h2 class="current-events__main-title">Актуальні події</h2>
+            <div class="card__photo card__photo--1"></div>
+
+            <div class="card__conteiner">
+              <div class="card__wrapper-text">
+                <p class="card__text">ВИСТАВКА</p>
+                <p class="card__data">26.08-29.11.2019</p>
+              </div>
+
+              <h3 class="card__title">Йду і повертаюсь</h3>
+
+              <p class="card__content">
+                Національний Художній Музей України презентує
+                унікальну частину колекції Градобанку - українське
+                мистецтво другої половини 1980-&nbsp;1995 років.
+              </p>
+            </div>
+          </section>
+
+          <section class="current-events__card card">
+            <div class="card__photo card__photo--2"></div>
+
+            <div class="card__conteiner">
+
+              <div class="card__wrapper-text">
+                <p class="card__text">ВИСТАВКА</p>
+                <p class="card__data">26.08-29.11.2019</p>
+              </div>
+
+              <h3 class="card__title card__title--margin">І спогади і мрії</h3>
+
+              <p class="card__content">
+                Національний художній музей України до 100 річчя від дня народження
+                видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </section>
+
+          <section class="current-events__card card">
+            <div class="card__photo card__photo-full"></div>
+
+            <div class="card__wrapper">
+              <div class="card__wrapper-text card__wrapper-text--padding">
+                <p class="card__text">ЛЕКЦІЯ</p>
+                <p class="card__data">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="card__title-not-red">Від класицизму до романтизму</h3>
+            </div>
+          </section>
+        </article>
+
+        <article class="gallery" id="галерея">
+          <div class="gallery__title">Галерея</div>
+
+          <div class="carousel">
+            <div class="carousel__track">
+              <div class="carousel__item">
+                <img
+                  src="images/carusel/carusel-1.png"
+                  alt="Photo 1"
+                  class="carousel__image"
+                >
+              </div>
+              <div class="carousel__item">
+                <img
+                  src="images/carusel/carusel-2.png"
+                  alt="Photo 2"
+                  class="carousel__image"
+                >
+              </div>
+              <div class="carousel__item">
+                <img
+                  src="images/carusel/carusel-2.png"
+                  alt="Photo 2"
+                  class="carousel__image"
+                >
+              </div>
+
+              <div class="carousel__item">
+                <img
+                  src="images/carusel/carusel-2.png"
+                  alt="Photo 2"
+                  class="carousel__image"
+                >
+              </div>
+            </div>
+            <div class="carousel__pagination"></div>
+          </div>
+
+          <div class="gallery__conteiner">
+            <div class="gallery__item gallery__item--square">
+              <img
+                src="images/carusel/carusel-1.png"
+                alt="Photo 1"
+                class="gallery__image"
+              >
+            </div>
+            <div class="gallery__item gallery__item--rectangle">
+              <img
+                src="images/carusel/gallery-2.png"
+                alt="Photo 2"
+                class="gallery__image"
+              >
+            </div>
+            <div class="gallery__item gallery__item--rectangle">
+              <img
+                src="images/carusel/gallery-3.png"
+                alt="Photo 3"
+                class="gallery__image"
+              >
+            </div>
+
+            <div class="gallery__item gallery__item--square">
+              <img
+                src="images/carusel/carusel-4.png"
+                alt="Photo 4"
+                class="gallery__image"
+              >
+            </div>
+          </div>
+        </article>
+
+        <article class="subscription page__subscription" id="про-нас">
+          <div class="subscription__wrapper">
+            <h3 class="subscription__title">Підписка</h3>
+            <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+            <form
+              action="#"
+              method="post"
+              class="subscription__item"
+              onsubmit="this.reset(); return false;"
+            >
+
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+                class="subscription__form"
+              >
+
+              <button
+                class="subscription__button"
+                type="submit"
+              ></button>
+            </form>
+          </div>
+        </article>
+      </div>
+    </main>
+
+    <footer class="page__footer footer" id="контакти">
+      <div class="footer__conteiner">
+        <div class="footer__top">
+          <a href="#" class="footer__logo">
+            <p class="footer__logo-link">NA</p>
+            <p class="footer__logo-link">MU</p>
+          </a>
+
+          <div class="footer__network">
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              class="footer__facebook"
+            ></a>
+
+            <a
+              href="https://www.instagram.com"
+              target="_blank"
+              class="footer__instagram"
+            ></a>
+          </div>
+        </div>
+
+        <section class="footer__left">
+          <h3 class="footer__title">Графік роботи</h3>
+          <ul class="footer__schedule">
+            <li class="footer__shedule-bold">12:00 — 20:00</li> середа <br>
+            <li class="footer__shedule-bold">12:00 — 20:00</li> четвер <br>
+            <li class="footer__shedule-bold">12:00 — 20:00</li> п’ятниця <br>
+            <li class="footer__shedule-bold">11:00 — 19:00</li> субота <br>
+            <li class="footer__shedule-bold">11:00 — 19:00</li> неділя <br>
+          </ul>
+          <p class="footer__schedule-on-weekend">
+            <span class="footer__shedule-bold">Вихідні:</span> понеділок, вівторок <br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </section>
+
+        <section class="footer__right">
+          <h3 class="footer__title">Контакти</h3>
+
+          <div class="footer__wrapper-contact">
+            <div class="footer__contact">
+              <a
+                href="https://www.google.com/maps/place/вул.+М.+Грушевського,+6,+Київ,+01001"
+                class="footer__contact-link"
+                target="_blank"
+              >
+              вул. М. Грушевського, 6; Київ, 01001 <br>
+              </a>
+              <a
+                href="tel:+380442781357"
+                class="footer__contact-link"
+                target="_blank"
+              >
+              тел. +38 (044) 278-13-57 <br>
+              </a>
+
+              <a
+                href="tel:+380442787454"
+                class="footer__contact-link"
+                target="_blank"
+              >
+              факс +38 (044) 278-74-54 <br>
+              </a>
+
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="footer__contact-link"
+                target="_blank"
+              >
+              e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+
+            <a href="#" class="footer__arrow-up"></a>
+          </div>
+        </section>
+
+        <div class="footer__nav">
+          <ul class="footer__list footer__list--left">
+            <li class="footer__item">
+              <a class="footer__link" href="#галерея">Галерея</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#виставки-та-події">Виставки та події</a>
+            </li>
+          </ul>
+
+          <ul class="footer__list footer__list--right">
+            <li class="footer__item">
+              <a class="footer__link" href="#про-нас">Про нас</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#контакти">Контакти</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__copyright">
+          <p class="footer__copyright-text">
+            Designed by Zhyriada Marina
+          </p>
+          <p class="footer__copyright-text">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
