add all project

--- a/src/index.html
+++ b/src/index.html
@@ -182,31 +182,215 @@
       <section class="galery" id="galery">
         <div class="container">
           <h2 class="galery__title subtitle">Галерея</h2>
-        </div>
 
-        <div class="galery__slaider slaider">
-          <div class="slaider__item">
-            <img src="./images/galery/1-mobile.jpg" alt="girl">
+          <div class="galery__slaider slaider">
+            <div class="slaider__item">
+              <picture class="slaider__images-1">
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="images/galery/1-desctop.jpg"
+                >
+
+                <source
+                  media="(min-width: 640px)"
+                  srcset="images/galery/1-tablet.jpg"
+                >
+
+                <img
+                  src="images/galery/1-mobile.jpg"
+                  alt="girl"
+                >
+              </picture>
+
+              <picture class="slaider__images-2">
+                <img
+                  src="images/galery/2-desctop.jpg"
+                  alt="house"
+                >
+              </picture>
+
+              <picture class="slaider__images-3">
+                <img
+                  src="images/galery/2-tablet.jpg"
+                  alt="duck"
+                >
+              </picture>
+            </div>
+            <div class="slaider__item">
+              <picture class="slaider__images-4">
+                <img
+                  src="images/galery/3-desctop.jpg"
+                  alt="chair"
+                >
+              </picture>
+
+              <picture class="slaider__images-5">
+                <img
+                  src="images/galery/4-desctop.jpg"
+                  alt="sea"
+                >
+              </picture>
+            </div>
+
+            <div class="slaider__dots">
+              <div class="slaider__dot--dark"></div>
+              <div class="slaider__dot--light"></div>
+              <div class="slaider__dot--light"></div>
+              <div class="slaider__dot--light"></div>
+            </div>
           </div>
-          <div class="slaider__item">
-            <img src="./images/galery/1-mobile.jpg" alt="girl">
-          </div>
-          <div class="slaider__item">
-            <img src="./images/galery/1-mobile.jpg" alt="girl">
-          </div>
-          <div class="slaider__item">
-            <img src="./images/galery/1-mobile.jpg" alt="girl">
-          </div>
-          <div class="slaider__item">
-            <img src="./images/galery/1-mobile.jpg" alt="girl">
-          </div>
-          <div class="slaider__item">
-            <img src="./images/galery/1-mobile.jpg" alt="girl">
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <div class="subscription__body">
+            <h2 class="subscription__title subtitle">Підписка</h2>
+
+            <div class="subscription__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </div>
+
+            <div class="subscription__button">
+              <form
+                class="subscription__form"
+                action="#"
+                name="form"
+                method="post"
+                id="form"
+                onsubmit="return signup();"
+              >
+                <input
+                  class="subscription__link-button"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                  id="email"
+                  required
+                ></input>
+
+                <button
+                  class="subscription__arrow-button"
+                  type="submit"
+                  onclick="document.getElementById('form').reset();"
+                ></button>
+              </form>
+            </div>
           </div>
         </div>
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inf">
+          <div class="footer__top">
+            <a href="#" >
+              <img
+                class="footer__logo"
+                src="./images/icons/NAMU.svg"
+                alt="NAMU"
+              >
+            </a>
+
+            <div class="footer__icons">
+              <a
+                class="footer__icons-link"
+                href="#facebook"
+                target="_blank"
+              >
+                <img src="./images/icons/facebook.svg" alt="facebook">
+              </a>
+
+              <a
+                class="footer__icons-link"
+                href="#instagram"
+                target="_blank"
+              >
+                <img src="./images/icons/instagram.svg" alt="instagram">
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__content">
+            <div class="footer__body">
+              <div class="footer__shedule" id="about-us">
+                <div class="footer__subtitle">Графік роботи</div>
+
+                <div class="footer__shedule-day">
+                  <div class="footer__text">
+                    <span class="footer__time">12:00 — 20:00 </span> середа <br> <span class="footer__time">12:00 — 20:00</span> четвер <br> <span class="footer__time">12:00 — 20:00</span> п’ятниця <br> <span class="footer__time">11:00 — 19:00</span> субота <br> <span class="footer__time">11:00 — 19:00</span> неділя
+                  </div>
+
+                  <div class="footer__weekend">
+                    <span class="footer__time">Вихідні:</span> понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею
+                  </div>
+                </div>
+              </div>
+
+              <div class="footer__contacts" id="contacts">
+                <div class="footer__contacts-name">Контакти:</div>
+
+                <div class="footer__adress">
+                  <a
+                    class="footer__adress-link"
+                    href="https://goo.gl/maps/RvopVkvbDjsBpsSH7"
+                    target="_blank"
+                  >вул. М. Грушевського, 6; Київ, 01001</a>
+                </div>
+
+                <div class="footer__phone">
+                  <a
+                    class="footer__phone-link"
+                    href="tel:+38 (044) 278-13-57"
+                    target="_blank"
+                  >+38 (044) 278-13-57 <br> факс +38 (044) 278-74-54</a>
+                </div>
+
+                <div class="footer__email">
+                  <a
+                    class="footer__email-link"
+                    href="email: info@namu.kiev.ua"
+                    target="_blank"
+                  > e-mail: info@namu.kiev.ua</a>
+                </div>
+              </div>
+            </div>
+
+            <a href="#" class="footer__button">
+              <img src="./images/icons/arrow-up.svg" alt="arrow-up">
+            </a>
+
+            <div class="footer__line"></div>
+
+            <div class="footer__navigation">
+              <div class="footer__row1">
+                <div class="footer__text">
+                  <a href="#galery" class="footer__text-link">Галерея</a>
+                </div>
+                <div class="footer__text">
+                  <a href="#events" class="footer__text-link">Виставки та події</a>
+                </div>
+              </div>
+
+              <div class="footer__row2">
+                <div class="footer__text">
+                  <a href="#about-us" class="footer__text-link">Про Нас</a>
+                </div>
+                <div class="footer__text">
+                  <a href="#contacts" class="footer__text-link">Контакти</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__other">
+          <div class="footer__autor">Designed by Zhyriada Marina</div>
+          <div class="footer__copyright">Copyright © 2019. All Rights Reserved.</div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
