--- a/src/index.html
+++ b/src/index.html
@@ -79,11 +79,11 @@
           <h3 class="menu__title">Графік роботи</h3>
           <div class="menu__wrapper">
             <ul class="menu__schedule">
-              <li class="menu__schedule-text">12:00 — 20:00</li> середа <br>
-              <li class="menu__schedule-text">12:00 — 20:00</li> четвер<br>
-              <li class="menu__schedule-text">12:00 — 20:00</li> п’ятниця <br>
-              <li class="menu__schedule-text">11:00 — 19:00</li> субота <br>
-              <li class="menu__schedule-text">11:00 — 19:00</li> неділя
+              <li class="menu__schedule-text"><span class="menu__schedule-text-bold">12:00 — 20:00</span> середа </li>
+              <li class="menu__schedule-text"><span class="menu__schedule-text-bold">12:00 — 20:00</span> четвер </li>
+              <li class="menu__schedule-text"><span class="menu__schedule-text-bold">12:00 — 20:00</span> п’ятниця </li>
+              <li class="menu__schedule-text"><span class="menu__schedule-text-bold">11:00 — 19:00</span> субота </li>
+              <li class="menu__schedule-text"><span class="menu__schedule-text-bold">11:00 — 19:00</span> неділя </li>
             </ul>
             <p class="menu__schedule-on-weekend">
               <span class="menu__schedule-text">Вихідні:</span> понеділок, вівторок <br>
@@ -281,11 +281,11 @@
         <section class="footer__left">
           <h3 class="footer__title">Графік роботи</h3>
           <ul class="footer__schedule">
-            <li class="footer__shedule-bold">12:00 — 20:00</li> середа <br>
-            <li class="footer__shedule-bold">12:00 — 20:00</li> четвер <br>
-            <li class="footer__shedule-bold">12:00 — 20:00</li> п’ятниця <br>
-            <li class="footer__shedule-bold">11:00 — 19:00</li> субота <br>
-            <li class="footer__shedule-bold">11:00 — 19:00</li> неділя <br>
+            <li class="footer__schedule-text"><span class="footer__schedule-text-bold">12:00 — 20:00</span> середа </li>
+            <li class="footer__schedule-text"><span class="footer__schedule-text-bold">12:00 — 20:00</span> четвер </li>
+            <li class="footer__schedule-text"><span class="footer__schedule-text-bold">12:00 — 20:00</span> п’ятниця </li>
+            <li class="footer__schedule-text"><span class="footer__schedule-text-bold">11:00 — 19:00</span> субота </li>
+            <li class="footer__schedule-text"><span class="footer__schedule-text-bold">11:00 — 19:00</span> неділя </li>
           </ul>
           <p class="footer__schedule-on-weekend">
             <span class="footer__shedule-bold">Вихідні:</span> понеділок, вівторок <br>
