add paddings to menu & fix card

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,6 @@
             <a href ="#contacts" class="grid__item item-contacts">Контакти</a>
           </div>
         </div>
-        <div class="aside__line line"></div>
         <div class="aside__bottom bottom">
           <div class="bottom__title">Графік роботи</div>
           <div class="aside__row row">
@@ -295,10 +294,10 @@
             </div>
           </div>
           <div class="footer__grid grid">
-            <a href="#" class="grid__item">Галерея</a>
-            <a href ="#" class="grid__item">Про Нас</a>
-            <a href ="#" class="grid__item">Виставки та події</a>
-            <a href ="#" class="grid__item">Контакти</a>
+            <a href="#" class="grid__item items">Галерея</a>
+            <a href ="#" class="grid__item items">Про Нас</a>
+            <a href ="#" class="grid__item items">Виставки та події</a>
+            <a href ="#" class="grid__item items">Контакти</a>
           </div>
         </div>
         <div class="footer__copyright">
@@ -312,3 +311,4 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
+ items
