--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
       
       <div class="header__ivent">
         <div class="header__ivent-arr"></div>
-        <p class="header__ivent_text">події</p>
+        <p class="header__ivent_text" style="margin: 0;">події</p>
       </div>
     </header>
 
