--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
               <li class="menu__schedule-text"><span class="menu__schedule-text-bold">11:00 — 19:00</span> неділя </li>
             </ul>
             <p class="menu__schedule-on-weekend">
-              <span class="menu__schedule-text">Вихідні:</span> понеділок, вівторок <br>
+              <span class="menu__schedule-on-weekend-text">Вихідні:</span> понеділок, вівторок <br>
               Каса припиняє роботу за 1 годину
               до закриття музею
             </p>
