--- a/src/index.html
+++ b/src/index.html
@@ -271,10 +271,10 @@
               <div class="contacts__header">Контакти:</div>
 
               <div class="contacts__content">
-                вул. М. Грушевського, 6;<br> Київ, 01001<br>
-                тел. +38 (044) 278-13-57<br>
+                <a class="footer__link" href="https://goo.gl/maps/3VDrnXdq1MiGQ8Kz5">вул. М. Грушевського, 6;<br> Київ, 01001<br></a>
+                <a class="footer__link" href="tel:+380442781357">тел. +38 (044) 278-13-57</a><br>
                 факс +38 (044)<br> 278-74-54<br>
-                e-mail: info@namu.kiev.ua
+                <a class="footer__link" href="https://mail.google.com/?">e-mail: info@namu.kiev.ua</a>
               </div>
             </div>
             <a class="return__link" href="#"><img src="./images/icons/arrow-green.svg" alt="arrow"></a>
