--- a/src/index.html
+++ b/src/index.html
@@ -144,17 +144,17 @@
               <!-- Slides -->
               <div class="swiper-slide">
                 <img class="swiper-img"
-                 src="images/pictures/gallery-1.svg"
+                  src="images/pictures/gallery-1.svg"
                   alt="gallery-1">
               </div>
               <div class="swiper-slide">
                 <img class="swiper-img"
-                src="images/pictures/gallery-2.svg"
-                alt="gallery-2">
+                  src="images/pictures/gallery-2.svg"
+                  alt="gallery-2">
               </div>
               <div class="swiper-slide">
                 <img class="swiper-img"
-                 src="images/pictures/gallery-1.svg"
+                  src="images/pictures/gallery-1.svg"
                   alt="gallery-1">
               </div>
               ...
@@ -169,25 +169,25 @@
           <div class="gallery__grid">
             <div class="grid__row">
               <img
-              src="images/pictures/gallery-1280-1.svg"
-               alt="1"
+                src="images/pictures/gallery-1280-1.svg"
+                alt="gallery-1"
                 class=" grid__img grid__img-1"
                 >
               <img
-              src="images/pictures/gallery-1280-2.svg"
-                alt="2"
+                src="images/pictures/gallery-1280-2.svg"
+                alt="gallery-2"
                 class="gird__img grid__img-2"
                 >
             </div>
             <div class="grid__row">
               <img
-              src="images/pictures/gallery-1280-3.svg"
-                alt="1"
+                src="images/pictures/gallery-1280-3.svg"
+                alt="gallery-3"
                 class="gird__img grid__img-3"
                 >
               <img
-              src="images/pictures/gallery-1280-4.svg"
-                alt="1"
+                src="images/pictures/gallery-1280-4.svg"
+                alt="gallery-41"
                 class="gird__img grid__img-4"
                 >
             </div>
@@ -230,10 +230,16 @@
             <div class="footer__top top">
               <p class="top__text footer__text">NA<br>MU</p>
               <div class="top__icons">
-                <a target="_blank" href="https://www.instagram.com/" class="fa-brands fa-instagram">
+                <a
+                  target="_blank"
+                  href="https://www.instagram.com/"
+                  class="fa-brands fa-instagram">
 
                 </a>
-                <a target="_blank" href="https://www.facebook.com/" class="fa-brands fa-facebook">
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/"
+                  class="fa-brands fa-facebook">
 
                 </a>
               </div>
@@ -268,13 +274,21 @@
                 </div>
                 <div class="item__contacts">
                   <div>
-                    <a class="contacts__link"
-                    href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu" target="_blank"> вул. М. Грушевського, 6; Київ, 01001
+                    <a
+                      class="contacts__link"
+                      href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
+                      target="_blank"> вул. М. Грушевського, 6; Київ, 01001
                     </a>
                   </div>
-                  <div><a class="contacts__link" href="tel:0442781357">тел. +38 (044) 278-13-57</a> <br></div>
-                  <div><a class="contacts__link" href="tel:0442781357">факс +38 (044) 278-74-54</a> <br></div>
-                  <div><a class="contacts__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a></div>
+                  <div>
+                    <a class="contacts__link" href="tel:0442781357">тел. +38 (044) 278-13-57</a> <br>
+                  </div>
+                  <div>
+                    <a class="contacts__link" href="tel:0442781357">факс +38 (044) 278-74-54</a> <br>
+                  </div>
+                  <div>
+                    <a class="contacts__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+                  </div>
 
                 </div>
                 <div class="row__text row__footer-text">
@@ -287,7 +301,7 @@
               </div>
               <a href="#" class="arrow-up">
                 <img class="arrow"
-                 src="images/icons/arrow-up.svg"
+                  src="images/icons/arrow-up.svg"
                   alt="arr"
                 >
               </a>
@@ -311,4 +325,3 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
- items
