--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,6 @@
           </div>
         </div>
       </div>
-
     </header>
 
     <aside class="menu page__menu" id="menu">
@@ -116,7 +115,147 @@
       </div>
     </aside>
 
-    <main></main>
+    <main class="main">
+      <section class="events">
+        <div class="container">
+          <h1 class="h2-title events__title">Актуальні події</h1>
+          <div class="events__exhibition">
+
+            <div class="event">
+              <img
+                src="./images/podii/idu_i_opvertayus.png"
+                alt="idu_i_opvertayus"
+                class="event__image"
+              >
+              <div class="event__description">
+                <div class="event__description-top">
+                  <p class="h6-title">ВИСТАВКА</p>
+                  <p class="event__date">26.08-29.11.2019</p>
+                </div>
+                <div class="event__description-top event__description-top--title">
+                  <p class="h3-title">Йду і повертаюсь</p>
+                  <div class="event__rect"></div>
+                </div>
+                <p class="event__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
+            </div>
+
+            <div class="event">
+              <img
+                src="./images/podii/i_spogady_i_mrii.png"
+                alt="idu_i_opvertayus"
+                class="event__image"
+              >
+              <div class="event__description">
+                <div class="event__description-top">
+                  <p class="h6-title">ВИСТАВКА</p>
+                  <p class="event__date">26.08-29.11.2019</p>
+                </div>
+                <div class="event__description-top event__description-top--title">
+                  <p class="h3-title">І спогади і мрії</p>
+                  <div class="event__rect"></div>
+                </div>
+                <p class="event__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="events__lecture">
+          <div class="lecture">
+            <img
+              src="./images/podii/vid_klasicizmu_do_romatyzmu.png"
+              alt="vid_klasicizmu_do_romatyzmu"
+              class="lecture__image"
+            >
+            <div class="container">
+              <img
+                src="./images/podii/vid_klasicizmu_do_romatyzmu_tablet.png"
+                alt="vid_klasicizmu_do_romatyzmu"
+                class="lecture__image--tablet"
+              >
+            </div>
+
+            <div class="container">
+              <div class="lecture__description">
+                <div class="lecture__description-top">
+                  <p class="h6-title">ЛЕКЦІЯ</p>
+                  <p class="event__date">26/08/2019 - 11:00</p>
+                </div>
+                <p class="h3-title lecture__title">Від класицизму до романтизму</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="container">
+        <section class="gallery">
+          <h1 class="h2-title gallery__title">Галерея</h1>
+          <div class="gallery__wrapper">
+            <div class="first-row">
+              <img
+                src="./images/gallery/gallery_1.png"
+                alt="art_1"
+                class="first-row__image--1"
+              >
+              <img
+                src="./images/gallery/gallery_2.png"
+                alt="art_2"
+                class="first-row__image--2 first-row__image--hidden"
+              >
+              <img
+                src="./images/gallery/gallery_2_tablet.png"
+                alt="art_2"
+                class="first-row__image first-row__image--hidden--desktop"
+              >
+            </div>
+
+            <div class="second-row">
+              <img
+                src="./images/gallery/gallery_3.png"
+                alt="art_3"
+                class="second-row__image--1"
+              >
+              <img
+                src="./images/gallery/gallery_4.png"
+                alt="art_4"
+                class="second-row__image--2"
+              >
+            </div>
+
+            <div class="gallery__dots">
+              <img src="./images/gallery/gallery_dots.png" alt="gallery_dors">
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <section class="subscription">
+        <h2 class="h2-title subscription__title">Підписка</h2>
+        <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <form
+          class="subscription__form"
+          action="#"
+          method="post"
+          onsubmit="this.reset(); return false;"
+        >
+          <div class="subscription__block">
+            <input
+              class="subscription__input"
+              type="email"
+              name="customer email subscription"
+              placeholder="E-mail"
+              required
+            >
+            <button type="submit" class="subscription__button">
+              <img src="./images/subscribe_button_arrow.svg" alt="subscribe_button_arrow">
+            </button>
+          </div>
+        </form>
+      </section>
+    </main>
 
     <footer></footer>
 
