--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>НАМУ</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="icon" href="./images/header/na-mu-logo.svg">
   </head>
@@ -14,18 +14,18 @@
     <header class="header">
       <div class="header__content">
         <div class="header__left">
-          <a href="#menu">
+          <a href="#menu" class="header__menu">
             <img
               src="./images/header/icons/menu_icon.svg"
               alt="menu_icon"
-              class="header__menu"
+              class="header__menu--icon"
             >
           </a>
 
           <h1 class="header__title">Художній <br> музей</h1>
           <div class="header__button">
-            <a class="header__button-text" href="#">Квитки</a>
-            <a class="header__button-arrow">
+            <a class="header__button-text" href="#events">Квитки</a>
+            <a class="header__button-arrow" href="#events">
               <img
                 src="./images/header/icons/header_arrow_right.svg"
                 alt="button_arrow"
@@ -35,7 +35,7 @@
           </div>
 
           <div class="header__side-nav">
-            <a class="header__side-nav--title h6-title" href="#">Події</a>
+            <a class="header__side-nav--title h6-title" href="#events">Події</a>
             <div class="header__side-nav--line"></div>
           </div>
         </div>
@@ -70,20 +70,20 @@
               <nav class="nav">
                 <ul class="nav__list">
                   <li class="nav__item">
-                    <a class="nav__link" href="#">Галерея</a>
+                    <a class="nav__link" href="#gallery">Галерея</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#">Виставки та події</a>
+                    <a class="nav__link" href="#events">Виставки та події</a>
                   </li>
                 </ul>
               </nav>
               <nav class="nav nav--right">
                 <ul class="nav__list">
                   <li class="nav__item">
-                    <a class="nav__link" href="#">Про нас</a>
+                    <a class="nav__link" href="#about">Про нас</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#">Контакти</a>
+                    <a class="nav__link" href="#contacts">Контакти</a>
                   </li>
                 </ul>
               </nav>
@@ -92,20 +92,20 @@
 
           <div class="menu__separator"></div>
           <div class="menu__bottom">
-            <p class="menu__text">Графік роботи</p>
+            <p class="text">Графік роботи</p>
             <div class="menu__schedule">
               <div class="menu__schedule--work-hours">
-                <p class="menu__text">
-                  <span class="menu__text-bold">12:00 — 20:00</span> середа
-                  <br><span class="menu__text-bold">12:00 — 20:00</span> четвер
-                  <br><span class="menu__text-bold">12:00 — 20:00</span> п’ятниця
-                  <br><span class="menu__text-bold">11:00 — 19:00</span> субота
-                  <br><span class="menu__text-bold">11:00 — 19:00</span> неділя
+                <p class="text">
+                  <span class="text__bold">12:00 — 20:00</span> середа
+                  <br><span class="text__bold">12:00 — 20:00</span> четвер
+                  <br><span class="text__bold">12:00 — 20:00</span> п’ятниця
+                  <br><span class="text__bold">11:00 — 19:00</span> субота
+                  <br><span class="text__bold">11:00 — 19:00</span> неділя
                 </p>
               </div>
               <div class="menu__schedule--day-off">
-                <p class="menu__text">
-                  <span class="menu__text-bold">Вихідні:</span> понеділок, вівторок
+                <p class="text">
+                  <span class="text__bold">Вихідні:</span> понеділок, вівторок
                   <br>Каса припиняє роботу за 1 годину до закриття музею
                 </p>
               </div>
@@ -116,7 +116,7 @@
     </aside>
 
     <main class="main">
-      <section class="events">
+      <section class="events" id="events">
         <div class="container">
           <h1 class="h2-title events__title">Актуальні події</h1>
           <div class="events__exhibition">
@@ -191,7 +191,7 @@
       </section>
 
       <div class="container">
-        <section class="gallery">
+        <section class="gallery" id="gallery">
           <h1 class="h2-title gallery__title">Галерея</h1>
           <div class="gallery__wrapper">
             <div class="first-row">
@@ -232,7 +232,7 @@
         </section>
       </div>
 
-      <section class="subscription">
+      <section class="subscription" id="about">
         <h2 class="h2-title subscription__title">Підписка</h2>
         <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
         <form
@@ -257,7 +257,97 @@
       </section>
     </main>
 
-    <footer></footer>
+    <div class="container">
+      <footer class="footer" id="contacts">
+        <div class="footer__icons">
+          <a href="#" class="footer__icon--logo"></a>
+          <div class="footer__socials">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="footer__icon--facebook"
+            >
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="footer__icon--instagram"
+            >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__scedule">
+          <p class="text">Графік роботи</p>
+          <p class="text">
+            <span class="text__bold">12:00 — 20:00</span> середа
+            <br><span class="text__bold">12:00 — 20:00</span> четвер
+            <br><span class="text__bold">12:00 — 20:00</span> п’ятниця
+            <br><span class="text__bold">11:00 — 19:00</span> субота
+            <br><span class="text__bold">11:00 — 19:00</span> неділя
+          </p>
+
+          <p class="text">
+            <span class="text__bold">Вихідні:</span> понеділок, вівторок
+            <br>Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+
+        <div class="footer__contacts">
+          <p class="text">Контакти:</p>
+          <p class="text">
+            <a
+              href="https://goo.gl/maps/ryfthymhtn4YrusY7"
+              class="footer__contact"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <br>тел.<a href="tel:+380442781357" class="footer__contact"> (044) 278-13-57</a>
+            <br>факс<a href="tel:+380442787454" class="footer__contact"> +38 (044) 278-74-54</a>
+            <br>e-mail:<a href="mailto:info@namu.kiev.ua" class="footer__contact"> info@namu.kiev.ua</a>
+          </p>
+        </div>
+
+        <div class="footer__go-to-top">
+          <a href="#" class="footer__go-to-top--icon"></a>
+        </div>
+
+        <div class="footer__separator"></div>
+
+        <div class="footer__nav--left">
+          <nav class="nav">
+            <ul class="footer__nav--list nav__list">
+              <li class="nav__item">
+                <a class="footer__nav nav__link" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="footer__nav nav__link" href="#events">Виставки та події</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__nav--right">
+          <nav class="nav">
+            <ul class="footer__nav--list nav__list">
+              <li class="nav__item">
+                <a class="footer__nav nav__link" href="#about">Про нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="footer__nav nav__link" href="#contacts">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__copyright">
+          <p class="footer__copyright--text">Designed by Zhyriada Marina</p>
+          <p class="footer__copyright--text">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+
+      </footer>
+    </div>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
