--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,6 @@
               class="header__menu--icon"
             >
           </a>
-
           <h1 class="header__title">Художній <br> музей</h1>
           <div class="header__button">
             <a class="header__button-text" href="#events">Квитки</a>
@@ -33,21 +32,21 @@
               >
             </a>
           </div>
-
           <div class="header__side-nav">
             <a class="header__side-nav--title h6-title" href="#events">Події</a>
             <div class="header__side-nav--line"></div>
           </div>
         </div>
 
+
         <div class="header__right">
           <div class="banner">
             <div class="banner__image"></div>
-            <a href="#">
+            <a href="#" class="banner__logo">
               <img
                 src="./images/header/na-mu-logo.svg"
                 alt="na-mu-logo"
-                class="banner__logo"
+                class="banner__logo--icon"
               >
             </a>
           </div>
