--- a/src/index.html
+++ b/src/index.html
@@ -249,7 +249,11 @@
               required
             >
             <button type="submit" class="subscription__button">
-              <img src="./images/subscribe_button_arrow.svg" alt="subscribe_button_arrow">
+              <img
+                src="./images/subscribe_button_arrow.svg"
+                alt="subscribe_button_arrow"
+                class="subscription__button--icon"
+              >
             </button>
           </div>
         </form>
