fix html codestyle

--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,6 @@
             </div>
           </div>
         </div>
-      </div>
       </section>
 
       <section class="gallery" id="gallery">
@@ -210,11 +209,9 @@
               placeholder="E-mail"
               required
               >
-              </input>
               <button type="submit"
                class="tickets__link-row form__button
                 tickets__link--orange"
-                target="_blank"
               >
                 <img src="images/icons/subs-arrow.svg" alt="arrow">
               </button>
@@ -251,25 +248,25 @@
                 <div class="footer__row row">
                   <div class="row__item row__item--footer">
                     <strong>
-                      <div class="item__date">12:00 - 20:00</div>
+                      <p class="item__date">12:00 - 20:00</p>
                     </strong>
-                    <div class="item__day">середа</div>
+                    <p class="item__day">середа</p>
                     <strong>
-                      <div class="item__date">12:00 - 20:00</div>
+                      <p class="item__date">12:00 - 20:00</p>
                     </strong>
-                    <div class="item__day">четвер</div>
+                    <p class="item__day">четвер</p>
                     <strong>
-                      <div class="item__date">12:00 - 20:00</div>
+                      <p class="item__date">12:00 - 20:00</p>
                     </strong>
-                    <div class="item__day">пятниця</div>
+                    <p class="item__day">пятниця</p>
                     <strong>
-                      <div class="item__date">11:00 - 19:00</div>
+                      <p class="item__date">11:00 - 19:00</p>
                     </strong>
-                    <div class="item__day">субота</div>
+                    <p class="item__day">субота</p>
                     <strong>
-                      <div class="item__date">11:00 - 19:00</div>
+                      <p class="item__date">11:00 - 19:00</p>
                     </strong>
-                    <div class="item__day">неділя</div>
+                    <p class="item__day">неділя</p>
                   </div>
                 </div>
                 <div class="item__contacts">
