--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
     <link
-    rel="icon"
-     type="image/x-icon"
+      rel="icon"
+      type="image/x-icon"
       href="/images/icons/favicon.png"
     >
   </head>
@@ -198,9 +198,9 @@
           <div class="subscription__title title">Підписка</div>
           <div class="subscription__subtitle subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
           <form
-          onsubmit="this.reset(); return false;"
-          class="form"
-           id="form"
+            onsubmit="this.reset(); return false;"
+            class="form"
+            id="form"
           >
             <div class="tickets__row  tickets__row--orange tickets">
               <input
@@ -209,8 +209,10 @@
               placeholder="E-mail"
               required
               >
-              <button type="submit"
-               class="tickets__link-row form__button
+              <button
+                type="submit"
+                class="tickets__link-row
+                form__button
                 tickets__link--orange"
               >
                 <img src="images/icons/subs-arrow.svg" alt="arrow">
