fix html images

--- a/src/index.html
+++ b/src/index.html
@@ -142,17 +142,20 @@
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide">
-                <img class="swiper-img"
+                <img
+                  class="swiper-img"
                   src="images/pictures/gallery-1.svg"
                   alt="gallery-1">
               </div>
               <div class="swiper-slide">
-                <img class="swiper-img"
+                <img
+                  class="swiper-img"
                   src="images/pictures/gallery-2.svg"
                   alt="gallery-2">
               </div>
               <div class="swiper-slide">
-                <img class="swiper-img"
+                <img
+                  class="swiper-img"
                   src="images/pictures/gallery-1.svg"
                   alt="gallery-1">
               </div>
@@ -299,7 +302,8 @@
                 </div>
               </div>
               <a href="#" class="arrow-up">
-                <img class="arrow"
+                <img
+                  class="arrow"
                   src="images/icons/arrow-up.svg"
                   alt="arr"
                 >
