--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           <div class="header__bottom bottom">
             <p class="header__title">ХУДОЖНІЙ<br> МУЗЕЙ</p>
             <a href="#" class="tickets__row tickets__row--green tickets">
-              <div class="tickets__text">КВИТКИ</div>
+              <p class="tickets__text">КВИТКИ</p>
               <div class="tickets__link-row">
                 <div class="tickets__link tickets__link--green">
                   <img src="images/icons/header-arrow.svg" alt="arrow">
@@ -52,16 +52,16 @@
           <div class="bottom__title">Графік роботи</div>
           <div class="aside__row row">
             <div class="row__item">
-              <div class="item__date">12:00 - 20:00</div>
-              <div class="item__day">середа</div>
-              <div class="item__date">12:00 - 20:00</div>
-              <div class="item__day">четвер</div>
-              <div class="item__date">12:00 - 20:00</div>
-              <div class="item__day">пятниця</div>
-              <div class="item__date">11:00 - 19:00</div>
-              <div class="item__day">субота</div>
-              <div class="item__date">11:00 - 19:00</div>
-              <div class="item__day">неділя</div>
+              <span class="item__date">12:00 - 20:00</span>
+              <span class="item__day">середа</span>
+              <span class="item__date">12:00 - 20:00</span>
+              <span class="item__day">четвер</span>
+              <span class="item__date">12:00 - 20:00</span>
+              <span class="item__day">пятниця</span>
+              <span class="item__date">11:00 - 19:00</span>
+              <span class="item__day">субота</span>
+              <span class="item__date">11:00 - 19:00</span>
+              <span class="item__day">неділя</span>
             </div>
             <div class="row__text  row__aside-text">
                 Вихідні:
@@ -84,16 +84,16 @@
             </div>
             <div class="actual__info info">
               <div class="info__row">
-                <div class="info__subtitle subtitle">ВИСТАВКА</div>
-                <div class="info__date subtitle">26.08-29.11.2019</div>
+                <p class="info__subtitle subtitle">ВИСТАВКА</p>
+                <span class="info__date subtitle">26.08-29.11.2019</span>
               </div>
               <div class="info__row">
                 <a href="#" class="info__title">Йду і повертаюсь</a>
               </div>
               <div class="info__row">
-                <div class="info__text subtitle">
+                <p class="info__text subtitle">
                   Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-                </div>
+                </p>
               </div>
             </div>
           </div>
@@ -104,16 +104,16 @@
             </div>
             <div class="actual__info info">
               <div class="info__row">
-                <div class="info__subtitle subtitle">ВИСТАВКА</div>
-                <div class="info__date subtitle">26.08-29.11.2019</div>
+                <p class="info__subtitle subtitle">ВИСТАВКА</p>
+                <span class="info__date subtitle">26.08-29.11.2019</span>
               </div>
               <div class="info__row">
                 <a href="#" class="info__title">Спогади і мрії</a>
               </div>
               <div class="info__row">
-                <div class="info__text subtitle">
+                <p class="info__text subtitle">
                   Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-                </div>
+                </p>
               </div>
             </div>
           </div>
@@ -124,11 +124,11 @@
         <div class="container lecture__container">
           <div class="lecture__info">
             <div class="lecture__row lecture__top">
-              <div class="info__subtitle subtitle">ЛЕКЦІЯ</div>
-              <div class="info__date subtitle">26/08/2019 - 11:00</div>
+              <p class="info__subtitle subtitle">ЛЕКЦІЯ</p>
+              <span class="info__date subtitle">26/08/2019 - 11:00</span>
             </div>
             <div class="lecture__row">
-              <div class="info__title info__title--no-pseudo">Від класицизму до романтизму</div>
+              <p class="info__title info__title--no-pseudo">Від класицизму до романтизму</p>
             </div>
           </div>
         </div>
@@ -136,7 +136,7 @@
 
       <section class="gallery" id="gallery">
         <div class="container gallery__container">
-          <div class="gallery__title title">Галерея</div>
+          <p class="gallery__title title">Галерея</p>
           <div class="swiper">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
@@ -198,8 +198,8 @@
       </section>
       <section class="subscription">
         <div class="container subscription__container">
-          <div class="subscription__title title">Підписка</div>
-          <div class="subscription__subtitle subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
+          <p class="subscription__title title">Підписка</p>
+          <p class="subscription__subtitle subtitle">Бути в курсі всіх актуальних подій та останніх новин.</p>
           <form
             onsubmit="this.reset(); return false;"
             class="form"
@@ -248,8 +248,8 @@
             </div>
             <div class="bottom__wrapper">
               <div class="footer__bottom bottom">
-                <div class="bottom__title">Графік роботи</div>
-                <div class="bottom__title">Контакти</div>
+                <p class="bottom__title">Графік роботи</p>
+                <p class="bottom__title">Контакти</p>
                 <div class="footer__row row">
                   <div class="row__item row__item--footer">
                     <strong>
@@ -318,8 +318,8 @@
           </div>
         </div>
         <div class="footer__copyright">
-          <div class="copyright__subtitle subtitle">Designed by Zhyriada Marina</div>
-          <div class="copyright__subtitle subtitle">Copyright © 2019. All Rights Reserved.</div>
+          <p class="copyright__subtitle subtitle">Designed by Zhyriada Marina</p>
+          <p class="copyright__subtitle subtitle">Copyright © 2019. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
